--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "challenges/challenge.css" %}">
+    <link rel="stylesheet" href="{% static "challenges/includes/header.css" %}">
+{% endblock  %}
 
 {% block page_title%}    
 Document
@@ -11,6 +17,6 @@ Document
     {% if text is not None %}
         <h2>{{text}}</h2>
     {% else %}
-        <p> There is nothing here </p>
+        <p class="fallback"> There is nothing here </p>
     {% endif %}
 {% endblock %}
